--- a/sistem/templates/Consultas/actualizar_consulta.html
+++ b/sistem/templates/Consultas/actualizar_consulta.html
@@ -26,7 +26,7 @@
                         {% csrf_token %}
                         
                         {{ consultaform |crispy}}
-                        <div class="d-grid gap-2">
+                        <div class="container1">
                             <button type="submit" class="btn btn-primary">Guardar</button>
                             <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
                         </div>
