--- a/sistem/templates/Pacientes/crear_paciente.html
+++ b/sistem/templates/Pacientes/crear_paciente.html
@@ -28,7 +28,7 @@
 
                         {{ PacienteForm |crispy}}
                        
-                        <div class="d-grid gap-2">
+                        <div class="container1">
                             <button type="submit" class="btn btn-primary">Guardar</button>
                             <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
                         </div>
