--- a/sistem/templates/Pacientes/pacientes.html
+++ b/sistem/templates/Pacientes/pacientes.html
@@ -7,12 +7,15 @@
 <div class="text-center">
     <h1>Pacientes</h1>
 </div>
-
-<div class="container">
-   
-        
-    <a class="btn btn-primary" href="/agregarpaciente/">Agregar</a>
-    <br><br>
+<nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="btn btn-primary" href="/agregarpaciente/">Agregar</a>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
 
     <table class="table table-bordered border-primary">
         <thead>
@@ -34,13 +37,14 @@
                             objeto='paciente',
                             objeto2='{{paciente.nombre}}'
                             )">Eliminar</button>
+                        <a class="btn btn-info" href="/historial/{{paciente.idpaciente}}/">Historial</a>
                     </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
     {% include "paginacion.html" %}
-</div>
+
 
 
 {% endblock content %}
