--- a/sistem/templates/index.html
+++ b/sistem/templates/index.html
@@ -14,65 +14,154 @@
     <!--SWEET ALERT -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+    <!-- Vinculación de fuentes de Google para iconos -->
+    <link rel= "stylesheet" 
+    href = "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" > 
+
     <!--Archivos estaticos CSS y JavaScript-->
-    <link rel="stylesheet" href="../../static/style.css" >
+    <link rel="stylesheet" href="/static/style.css" >
     <script src="//code.jquery.com/jquery.min.js"></script>
     <script src="{% static 'script.js' %}"></script>
 </head>
 <body>
-    <nav>
-        <div class="logo" >
-            <a href="/home/" ><img src="../../static/logo.png" height="40" width="40" alt="Botón"</a>
-        </div>
-        <ul id="menuList">
-            <li><a class="d-block text-light p-3" href="/pacientes/" >Pacientes</a></li>
-            <li><a class="d-block text-light p-3" href="/consultas/">Consultas</a></li>
-            <li><a class="d-block text-light p-3" href="">Ejercicios</a></li>
-            <li><a class="d-block text-light p-3" href="/citas/">Citas</a></li>
-            <li><a class="d-block text-light p-3" href="/estadisticas/">Estadisticas</a></li>
+    <aside class="sidebar">
+      <!-- Sidebar header -->
+      <header class="sidebar-header">
+        <a href="#" class="header-logo">
+          <img src="../../static/images/logo.png" alt="CodingNepal">
+        </a>
+        <button class="toggler sidebar-toggler">
+          <span class="material-symbols-rounded">chevron_left</span>
+        </button>
+        <button class="toggler menu-toggler">
+          <span class="material-symbols-rounded">menu</span>
+        </button>
+      </header>
 
-            {% if user.is_authenticated %}
 
-                <li><a href="{% url 'logout' %}">Cerrar sesion</a></li>
-                <li><a href="#">@{{user.username}}</a></li>
-            {% else %}
-                <li><a href="{% url 'login' %}">Iniciar sesion</a></li>
-            
-            {% endif %}
-            
+      <nav class="sidebar-nav">
+        <!-- Primary top nav -->
+
+        <ul class="nav-list primary-nav">
+
+          <li class="nav-item">
+            <a href="/" class="nav-link">
+              <span class="nav-icon material-symbols-rounded">dashboard</span>
+              <span class="nav-label">Inicio</span>
+            </a>
+            <span class="nav-tooltip">Inicio</span>
+          </li>
+          
+          <li class="nav-item">
+            <a href="/pacientes/" class="nav-link">
+                <span class="nav-icon material-symbols-rounded">group</span>
+              <span class="nav-label">Pacientes</span>
+            </a>
+            <span class="nav-tooltip">Pacientes</span>
+          </li>
+
+          <li class="nav-item">
+            <a href="/citas/" class="nav-link">
+              <span class="nav-icon material-symbols-rounded">calendar_today</span>
+              <span class="nav-label">Citas</span>
+            </a>
+            <span class="nav-tooltip">Citas</span>
+          </li>
+
+          <li class="nav-item">
+            <a href="/consultas/" class="nav-link">
+              <span class="nav-icon material-symbols-rounded">edit_note</span>
+              <span class="nav-label">Consultas</span>
+            </a>
+            <span class="nav-tooltip">Consultas</span>
+          </li>
+
+          <li class="nav-item">
+            <a href="/estadisticas/" class="nav-link">
+              <span class="nav-icon material-symbols-rounded">insert_chart</span>
+              <span class="nav-label">Estadisticas</span>
+            </a>
+            <span class="nav-tooltip">Estadisticas</span>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <span class="nav-icon material-symbols-rounded">fitness_center</span>
+              <span class="nav-label">Ejercicios</span>
+            </a>
+            <span class="nav-tooltip">Ejercicios</span>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <span class="nav-icon material-symbols-rounded">settings</span>
+              <span class="nav-label">Settings</span>
+            </a>
+            <span class="nav-tooltip">Settings</span>
+          </li>
+
         </ul>
-        <div class="menu-icon">
-            <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
-            
-        </div>
-    </nav>
-
-    <script>
-        let menuList = document.getElementById("menuList")
-        menuList.style.maxHeight = "0px";
-
-        function toggleMenu(){
-            if(menuList.style.maxHeight == "0px")
-            {
-                menuList.style.maxHeight = "300px";
-            }
-            else{
-                menuList.style.maxHeight = "0px";
-            }
-        }
-        
-    </script>
-     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                
-                <br/>
-                {% block content %}
-                {% endblock content %}
+        <!-- Secondary bottom nav -->
+        <ul class="nav-list secondary-nav">
+          <li class="nav-item">
+            <a class="nav-link">
+              <span class="nav-icon material-symbols-rounded">account_circle</span>
+              <span class="nav-label">@{{user.username}}</span>
+            </a>
+            <span class="nav-tooltip">@{{user.username}}</span>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'logout' %}" class="nav-link">
+              <span class="nav-icon material-symbols-rounded">logout</span>
+              <span class="nav-label">Logout</span>
+            </a>
+            <span class="nav-tooltip">Logout</span>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <div class="content">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    {% block content %}
+                    {% endblock content %}
+                </div>
             </div>
-        </div>
-   </div>
-    <!--<script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>
--->     
+       </div>
+    </div>
+    <!-- Script -->
+    <script>
+        const sidebar = document.querySelector(".sidebar");
+        const sidebarToggler = document.querySelector(".sidebar-toggler");
+        const menuToggler = document.querySelector(".menu-toggler");
+        // Ensure these heights match the CSS sidebar height values
+        let collapsedSidebarHeight = "56px"; // Height in mobile view (collapsed)
+        let fullSidebarHeight = "calc(100vh - 32px)"; // Height in larger screen
+        // Toggle sidebar's collapsed state
+        sidebarToggler.addEventListener("click", () => {
+        sidebar.classList.toggle("collapsed");
+        });
+        // Update sidebar height and menu toggle text
+        const toggleMenu = (isMenuActive) => {
+        sidebar.style.height = isMenuActive ? `${sidebar.scrollHeight}px` : collapsedSidebarHeight;
+        menuToggler.querySelector("span").innerText = isMenuActive ? "close" : "menu";
+        }
+        // Toggle menu-active class and adjust height
+        menuToggler.addEventListener("click", () => {
+        toggleMenu(sidebar.classList.toggle("menu-active"));
+        });
+        // (Optional code): Adjust sidebar height on window resize
+        window.addEventListener("resize", () => {
+        if (window.innerWidth >= 1024) {
+            sidebar.style.height = fullSidebarHeight;
+        } else {
+            sidebar.classList.remove("collapsed");
+            sidebar.style.height = "auto";
+            toggleMenu(sidebar.classList.contains("menu-active"));
+        }
+        });
+        window.onload = $(".toggler").click();
+    </script>
 </body>
 </html>
