--- a/sistem/templates/registration/login.html
+++ b/sistem/templates/registration/login.html
@@ -15,7 +15,7 @@
     <br>
     {% load crispy_forms_tags %}
     <div class="container">
-        <div class="row">
+        <div class="row-2">
             <div class="col-12 col-md-6 offset-md-3">
                 <div class="car">
                     <div class="card-body">
