--- a/sistem/templates/index.html
+++ b/sistem/templates/index.html
@@ -28,7 +28,7 @@
       <!-- Sidebar header -->
       <header class="sidebar-header">
         <a href="#" class="header-logo">
-          <img src="../../static/images/logo.png" alt="CodingNepal">
+          <img src="../../../../static/images/logo.png" alt="CodingNepal">
         </a>
         <button class="toggler sidebar-toggler">
           <span class="material-symbols-rounded">chevron_left</span>
@@ -124,8 +124,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
+                  <br>
                     {% block content %}
                     {% endblock content %}
+
                 </div>
             </div>
        </div>
