--- a/sistem/templates/Consultas/consultas.html
+++ b/sistem/templates/Consultas/consultas.html
@@ -7,17 +7,15 @@
     <div class="text-center">
         <h1>Consultas</h1>
 </div>
-<div class="container1">
-    <div class="container2">   
+<nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
         <a class="btn btn-primary" href="/agregarconsulta/">Agregar</a>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
-    <div class="container2">
-        <h3>Buscar:</h3>
-        <input type="search" id="search">
-        <h3> </h3>
-        <button type="button" class="btn btn-success" onclick="buscarconsulta( )">Buscar</button>
-    </div>
-</div>
+  </nav>
     <table class="table table-bordered border-primary">
         <thead>
             <th>Numero</th>
