--- a/sistem/templates/citas/actualizar_cita.html
+++ b/sistem/templates/citas/actualizar_cita.html
@@ -17,6 +17,7 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
+                <h5>Numero: {{ cita.idcita }}</h4>
                 <div class="card-header">
 
                 </div>
