--- a/sistem/templates/citas/citas.html
+++ b/sistem/templates/citas/citas.html
@@ -12,7 +12,13 @@
 <div class="container1">
     <div class="container2">
         <a class="btn btn-primary" href="/agregarcita/">Agregar</a>
-    </div>    
+    </div>
+    <div class="container2">
+        <h3>Semana: {{semana}} </h3>
+    </div>
+    <div class="container2">
+        <h3>Citas: {{ conteocitas }}</h3>
+    </div>
     <div class="container2">
         <h4>Buscar: </h4>
         <input type="week" name="week">
@@ -158,12 +164,7 @@
         </tbody>
         
     </table>
-    <div class="container_resumen_datoscitas1">
-        <div class="container_resumen_datoscitas1">
-            <h3>Semana: {{semana}} </h3>
-            <h3>Citas: {{ conteocitas }}</h3>
-        </div>
-    </div>
+ 
    
     <!--{% include "paginacion.html" %}-->
 
