--- a/sistem/templates/citas/crear_cita.html
+++ b/sistem/templates/citas/crear_cita.html
@@ -29,7 +29,7 @@
                        
                         <div class="container1">
                             <button type="submit" class="btn btn-primary">Guardar</button>
-                            <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
+                            <a class="btn btn-secondary" href="/citas/">Cancelar</a>
                         </div>
                     </form>
                 </div>
