--- a/sistem/static/style.css
+++ b/sistem/static/style.css
@@ -280,6 +280,16 @@ body {
   text-align: center;
   padding: 0px;
 }
-
-
+/*BUSQUEDA DE PACIENTES*/
+.search:focus{
+  width: 50%;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
+  transition: .5s;
+  border-radius: 7px;
+  padding: 15px 15px;
+  margin: auto;
+}
+.not-visible{
+  display: none;
+}
 
